connect python to MySQL

--- a/notebooks/Python/1. python and mysql.ipynb
+++ b/notebooks/Python/1. python and mysql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,25 +24,43 @@
     "  \"port\": 3306,\n",
     "  \"user\": \"root\",\n",
     "  \"password\": \"123456789\",\n",
-    "  \"database\": \"online_store_dataset\"\n",
+    "  \"database\": \"chinook\"\n",
     "}\n",
     "with open(\"D:/python/Online store dataset/Analysis data/notebooks/Python/config.json\", \"w\") as outfile: \n",
-    "    json.dump(config, outfile)\n"
+    "    json.dump(config, outfile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open (\"D:/python/Online store dataset/Analysis data/notebooks/Python/config.json\",\"r\") as config_file:\n",
-    "    db_config = json.load(config_file)"
+    "    db_config = json.load(config_file)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'host': 'localhost', 'port': 3306, 'user': 'root', 'password': '123456789', 'database': 'chinook'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(db_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -67,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_1764\\1478590201.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_1876\\1478590201.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  name_of_tabels =pd.read_sql(name_tables_database, conn)\n"
      ]
     },
@@ -151,7 +169,7 @@
        "7                       products"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
