read and create datafram by for

--- a/notebooks/Python/1. python and mysql.ipynb
+++ b/notebooks/Python/1. python and mysql.ipynb
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_1876\\1478590201.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_8356\\1478590201.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  name_of_tabels =pd.read_sql(name_tables_database, conn)\n"
      ]
     },
@@ -117,59 +117,74 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Tables_in_online_store_dataset</th>\n",
+       "      <th>Tables_in_chinook</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>customers</td>\n",
+       "      <td>album</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>employees</td>\n",
+       "      <td>artist</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>offices</td>\n",
+       "      <td>customer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>orderdetails</td>\n",
+       "      <td>employee</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>orders</td>\n",
+       "      <td>genre</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>payments</td>\n",
+       "      <td>invoice</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>productlines</td>\n",
+       "      <td>invoiceline</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>products</td>\n",
+       "      <td>mediatype</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>playlist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>playlisttrack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>track</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Tables_in_online_store_dataset\n",
-       "0                      customers\n",
-       "1                      employees\n",
-       "2                        offices\n",
-       "3                   orderdetails\n",
-       "4                         orders\n",
-       "5                       payments\n",
-       "6                   productlines\n",
-       "7                       products"
+       "   Tables_in_chinook\n",
+       "0              album\n",
+       "1             artist\n",
+       "2           customer\n",
+       "3           employee\n",
+       "4              genre\n",
+       "5            invoice\n",
+       "6        invoiceline\n",
+       "7          mediatype\n",
+       "8           playlist\n",
+       "9      playlisttrack\n",
+       "10             track"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,6 +193,257 @@
     "name_tables_database = \"show tables\"\n",
     "name_of_tabels =pd.read_sql(name_tables_database, conn)\n",
     "name_of_tabels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             album\n",
+       "1            artist\n",
+       "2          customer\n",
+       "3          employee\n",
+       "4             genre\n",
+       "5           invoice\n",
+       "6       invoiceline\n",
+       "7         mediatype\n",
+       "8          playlist\n",
+       "9     playlisttrack\n",
+       "10            track\n",
+       "Name: Tables_in_chinook, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_of_tabels[\"Tables_in_chinook\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_8356\\1179718964.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "table ----- album\n",
+      "table ----- artist\n",
+      "table ----- customer\n",
+      "table ----- employee\n",
+      "table ----- genre\n",
+      "table ----- invoice\n",
+      "table ----- invoiceline\n",
+      "table ----- mediatype\n",
+      "table ----- playlist\n",
+      "table ----- playlisttrack\n",
+      "table ----- track\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframes = {}\n",
+    "for table_name in name_of_tabels[\"Tables_in_chinook\"]:\n",
+    "    query = f\"SELECT * FROM {table_name}\"\n",
+    "    df = pd.read_sql(query, conn)\n",
+    "    globals()[table_name] = df\n",
+    "    print(f\"table ----- {table_name}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AlbumId</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>ArtistId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>For Those About To Rock We Salute You</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Balls to the Wall</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Restless and Wild</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Let There Be Rock</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Big Ones</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342</th>\n",
+       "      <td>343</td>\n",
+       "      <td>Respighi:Pines of Rome</td>\n",
+       "      <td>226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>344</td>\n",
+       "      <td>Schubert: The Late String Quartets &amp; String Qu...</td>\n",
+       "      <td>272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>345</td>\n",
+       "      <td>Monteverdi: L'Orfeo</td>\n",
+       "      <td>273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>346</td>\n",
+       "      <td>Mozart: Chamber Music</td>\n",
+       "      <td>274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>346</th>\n",
+       "      <td>347</td>\n",
+       "      <td>Koyaanisqatsi (Soundtrack from the Motion Pict...</td>\n",
+       "      <td>275</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>347 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     AlbumId                                              Title  ArtistId\n",
+       "0          1              For Those About To Rock We Salute You         1\n",
+       "1          2                                  Balls to the Wall         2\n",
+       "2          3                                  Restless and Wild         2\n",
+       "3          4                                  Let There Be Rock         1\n",
+       "4          5                                           Big Ones         3\n",
+       "..       ...                                                ...       ...\n",
+       "342      343                             Respighi:Pines of Rome       226\n",
+       "343      344  Schubert: The Late String Quartets & String Qu...       272\n",
+       "344      345                                Monteverdi: L'Orfeo       273\n",
+       "345      346                              Mozart: Chamber Music       274\n",
+       "346      347  Koyaanisqatsi (Soundtrack from the Motion Pict...       275\n",
+       "\n",
+       "[347 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "album"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "خطا در خواندن جدول 'Tables_in_chinook': Execution failed on sql 'SELECT * FROM Tables_in_chinook': (1146, \"Table 'chinook.tables_in_chinook' doesn't exist\")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_8356\\723696959.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, conn)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# فرض بر این است که conn قبلاً تعریف شده است\n",
+    "# name_of_tables شامل لیست اسم‌های جدول‌هاست\n",
+    "\n",
+    "# دیکشنری برای نگهداری دیتا فریم‌ها\n",
+    "dataframes = {}\n",
+    "\n",
+    "# حلقه برای خواندن هر جدول و ذخیره کردن آن به عنوان دیتا فریم\n",
+    "for table_name in name_of_tabels:\n",
+    "    try:\n",
+    "        # ساخت کوئری SELECT برای هر جدول\n",
+    "        query = f\"SELECT * FROM {table_name}\"\n",
+    "        \n",
+    "        # خواندن داده‌ها از دیتابیس و ذخیره کردن در دیتا فریم\n",
+    "        df = pd.read_sql(query, conn)\n",
+    "        \n",
+    "        # ذخیره دیتا فریم با نام جدول در دیکشنری\n",
+    "        dataframes[table_name] = df\n",
+    "        \n",
+    "        print(f\"جدول '{table_name}' با موفقیت خوانده شد.\")\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"خطا در خواندن جدول '{table_name}': {e}\")\n",
+    "\n",
+    "# اگر می‌خواهید دیتا فریم‌ها را به صورت جداگانه دسترسی کنید:\n",
+    "# مثال: dataframes['نام_جدول'] را استفاده کنید."
    ]
   }
  ],
