read dataframe and creat dataframe and save as csv

--- a/notebooks/Python/1. python and mysql.ipynb
+++ b/notebooks/Python/1. python and mysql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "  \"port\": 3306,\n",
     "  \"user\": \"root\",\n",
     "  \"password\": \"123456789\",\n",
-    "  \"database\": \"chinook\"\n",
+    "  \"database\": \"online_store_dataset\"\n",
     "}\n",
     "with open(\"D:/python/Online store dataset/Analysis data/notebooks/Python/config.json\", \"w\") as outfile: \n",
     "    json.dump(config, outfile)"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'host': 'localhost', 'port': 3306, 'user': 'root', 'password': '123456789', 'database': 'chinook'}\n"
+      "{'host': 'localhost', 'port': 3306, 'user': 'root', 'password': '123456789', 'database': 'online_store_dataset'}\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_8356\\1478590201.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_9640\\1478590201.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  name_of_tabels =pd.read_sql(name_tables_database, conn)\n"
      ]
     },
@@ -117,74 +117,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Tables_in_chinook</th>\n",
+       "      <th>Tables_in_online_store_dataset</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>album</td>\n",
+       "      <td>customers</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>artist</td>\n",
+       "      <td>employees</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>customer</td>\n",
+       "      <td>offices</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>employee</td>\n",
+       "      <td>orderdetails</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>genre</td>\n",
+       "      <td>orders</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>invoice</td>\n",
+       "      <td>payments</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>invoiceline</td>\n",
+       "      <td>productlines</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>mediatype</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>playlist</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>playlisttrack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>track</td>\n",
+       "      <td>products</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Tables_in_chinook\n",
-       "0              album\n",
-       "1             artist\n",
-       "2           customer\n",
-       "3           employee\n",
-       "4              genre\n",
-       "5            invoice\n",
-       "6        invoiceline\n",
-       "7          mediatype\n",
-       "8           playlist\n",
-       "9      playlisttrack\n",
-       "10             track"
+       "  Tables_in_online_store_dataset\n",
+       "0                      customers\n",
+       "1                      employees\n",
+       "2                        offices\n",
+       "3                   orderdetails\n",
+       "4                         orders\n",
+       "5                       payments\n",
+       "6                   productlines\n",
+       "7                       products"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,69 +182,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0             album\n",
-       "1            artist\n",
-       "2          customer\n",
-       "3          employee\n",
-       "4             genre\n",
-       "5           invoice\n",
-       "6       invoiceline\n",
-       "7         mediatype\n",
-       "8          playlist\n",
-       "9     playlisttrack\n",
-       "10            track\n",
-       "Name: Tables_in_chinook, dtype: object"
+       "0       customers\n",
+       "1       employees\n",
+       "2         offices\n",
+       "3    orderdetails\n",
+       "4          orders\n",
+       "5        payments\n",
+       "6    productlines\n",
+       "7        products\n",
+       "Name: Tables_in_online_store_dataset, dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name_of_tabels[\"Tables_in_chinook\"]"
+    "name_of_tabels[\"Tables_in_online_store_dataset\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_8356\\1179718964.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, conn)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "table ----- album\n",
-      "table ----- artist\n",
-      "table ----- customer\n",
-      "table ----- employee\n",
-      "table ----- genre\n",
-      "table ----- invoice\n",
-      "table ----- invoiceline\n",
-      "table ----- mediatype\n",
-      "table ----- playlist\n",
-      "table ----- playlisttrack\n",
-      "table ----- track\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataframes = {}\n",
-    "for table_name in name_of_tabels[\"Tables_in_chinook\"]:\n",
+    "import os\n",
+    "for table_name in name_of_tabels[\"Tables_in_online_store_dataset\"]:\n",
     "    query = f\"SELECT * FROM {table_name}\"\n",
     "    df = pd.read_sql(query, conn)\n",
     "    globals()[table_name] = df\n",
@@ -268,7 +224,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_9640\\3229501128.py:7: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  globals()[var_name] = pd.read_sql(file_name, conn)\n"
+     ]
+    }
+   ],
+   "source": [
+    "variable_names = list(name_of_tabels[\"Tables_in_online_store_dataset\"])\n",
+    "file_names = []\n",
+    "for i in range(len(variable_names)):\n",
+    "    a = f\"\"\"SELECT * from {name_of_tabels.iloc[i][\"Tables_in_online_store_dataset\"]}\"\"\"\n",
+    "    file_names.append(a)\n",
+    "for var_name, file_name in zip(variable_names, file_names):\n",
+    "    globals()[var_name] = pd.read_sql(file_name, conn)\n",
+    "\n",
+    "for var_name in variable_names:\n",
+    "    globals()[var_name].to_csv(f'D:/python/Online store dataset/Analysis data/notebooks/Python/data/processed/dataframe/{var_name}.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -292,158 +275,119 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>AlbumId</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>ArtistId</th>\n",
+       "      <th>customerNumber</th>\n",
+       "      <th>checkNumber</th>\n",
+       "      <th>paymentDate</th>\n",
+       "      <th>amount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>For Those About To Rock We Salute You</td>\n",
-       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "      <td>HQ336336</td>\n",
+       "      <td>2004-10-19</td>\n",
+       "      <td>6066.78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Balls to the Wall</td>\n",
-       "      <td>2</td>\n",
+       "      <td>103</td>\n",
+       "      <td>JM555205</td>\n",
+       "      <td>2003-06-05</td>\n",
+       "      <td>14571.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Restless and Wild</td>\n",
-       "      <td>2</td>\n",
+       "      <td>103</td>\n",
+       "      <td>OM314933</td>\n",
+       "      <td>2004-12-18</td>\n",
+       "      <td>1676.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Let There Be Rock</td>\n",
-       "      <td>1</td>\n",
+       "      <td>112</td>\n",
+       "      <td>BO864823</td>\n",
+       "      <td>2004-12-17</td>\n",
+       "      <td>14191.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Big Ones</td>\n",
-       "      <td>3</td>\n",
+       "      <td>112</td>\n",
+       "      <td>HQ55022</td>\n",
+       "      <td>2003-06-06</td>\n",
+       "      <td>32641.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>342</th>\n",
-       "      <td>343</td>\n",
-       "      <td>Respighi:Pines of Rome</td>\n",
-       "      <td>226</td>\n",
+       "      <th>268</th>\n",
+       "      <td>495</td>\n",
+       "      <td>BH167026</td>\n",
+       "      <td>2003-12-26</td>\n",
+       "      <td>59265.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>343</th>\n",
-       "      <td>344</td>\n",
-       "      <td>Schubert: The Late String Quartets &amp; String Qu...</td>\n",
-       "      <td>272</td>\n",
+       "      <th>269</th>\n",
+       "      <td>495</td>\n",
+       "      <td>FN155234</td>\n",
+       "      <td>2004-05-14</td>\n",
+       "      <td>6276.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>344</th>\n",
-       "      <td>345</td>\n",
-       "      <td>Monteverdi: L'Orfeo</td>\n",
-       "      <td>273</td>\n",
+       "      <th>270</th>\n",
+       "      <td>496</td>\n",
+       "      <td>EU531600</td>\n",
+       "      <td>2005-05-25</td>\n",
+       "      <td>30253.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>345</th>\n",
-       "      <td>346</td>\n",
-       "      <td>Mozart: Chamber Music</td>\n",
-       "      <td>274</td>\n",
+       "      <th>271</th>\n",
+       "      <td>496</td>\n",
+       "      <td>MB342426</td>\n",
+       "      <td>2003-07-16</td>\n",
+       "      <td>32077.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>346</th>\n",
-       "      <td>347</td>\n",
-       "      <td>Koyaanisqatsi (Soundtrack from the Motion Pict...</td>\n",
-       "      <td>275</td>\n",
+       "      <th>272</th>\n",
+       "      <td>496</td>\n",
+       "      <td>MN89921</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>52166.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>347 rows × 3 columns</p>\n",
+       "<p>273 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     AlbumId                                              Title  ArtistId\n",
-       "0          1              For Those About To Rock We Salute You         1\n",
-       "1          2                                  Balls to the Wall         2\n",
-       "2          3                                  Restless and Wild         2\n",
-       "3          4                                  Let There Be Rock         1\n",
-       "4          5                                           Big Ones         3\n",
-       "..       ...                                                ...       ...\n",
-       "342      343                             Respighi:Pines of Rome       226\n",
-       "343      344  Schubert: The Late String Quartets & String Qu...       272\n",
-       "344      345                                Monteverdi: L'Orfeo       273\n",
-       "345      346                              Mozart: Chamber Music       274\n",
-       "346      347  Koyaanisqatsi (Soundtrack from the Motion Pict...       275\n",
+       "     customerNumber checkNumber paymentDate    amount\n",
+       "0               103    HQ336336  2004-10-19   6066.78\n",
+       "1               103    JM555205  2003-06-05  14571.44\n",
+       "2               103    OM314933  2004-12-18   1676.14\n",
+       "3               112    BO864823  2004-12-17  14191.12\n",
+       "4               112     HQ55022  2003-06-06  32641.98\n",
+       "..              ...         ...         ...       ...\n",
+       "268             495    BH167026  2003-12-26  59265.14\n",
+       "269             495    FN155234  2004-05-14   6276.60\n",
+       "270             496    EU531600  2005-05-25  30253.75\n",
+       "271             496    MB342426  2003-07-16  32077.44\n",
+       "272             496     MN89921  2004-12-31  52166.00\n",
        "\n",
-       "[347 rows x 3 columns]"
+       "[273 rows x 4 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "album"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "خطا در خواندن جدول 'Tables_in_chinook': Execution failed on sql 'SELECT * FROM Tables_in_chinook': (1146, \"Table 'chinook.tables_in_chinook' doesn't exist\")\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\Oracel19c\\admin\\orcl\\Temp\\ipykernel_8356\\723696959.py:16: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df = pd.read_sql(query, conn)\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# فرض بر این است که conn قبلاً تعریف شده است\n",
-    "# name_of_tables شامل لیست اسم‌های جدول‌هاست\n",
-    "\n",
-    "# دیکشنری برای نگهداری دیتا فریم‌ها\n",
-    "dataframes = {}\n",
-    "\n",
-    "# حلقه برای خواندن هر جدول و ذخیره کردن آن به عنوان دیتا فریم\n",
-    "for table_name in name_of_tabels:\n",
-    "    try:\n",
-    "        # ساخت کوئری SELECT برای هر جدول\n",
-    "        query = f\"SELECT * FROM {table_name}\"\n",
-    "        \n",
-    "        # خواندن داده‌ها از دیتابیس و ذخیره کردن در دیتا فریم\n",
-    "        df = pd.read_sql(query, conn)\n",
-    "        \n",
-    "        # ذخیره دیتا فریم با نام جدول در دیکشنری\n",
-    "        dataframes[table_name] = df\n",
-    "        \n",
-    "        print(f\"جدول '{table_name}' با موفقیت خوانده شد.\")\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"خطا در خواندن جدول '{table_name}': {e}\")\n",
-    "\n",
-    "# اگر می‌خواهید دیتا فریم‌ها را به صورت جداگانه دسترسی کنید:\n",
-    "# مثال: dataframes['نام_جدول'] را استفاده کنید."
+    "payments"
    ]
   }
  ],
